--- a/views/form.ejs
+++ b/views/form.ejs
@@ -1,52 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vidio-Dubbing</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Vidio-Dubbing</title>
+  <link rel="stylesheet" href="/index.css" type="text/css">
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
+
 <body>
-<h1>Vidio dubbing translator</h1>
-<div class="input-group mb-3">
-    <label class="input-group-text" for="inputGroupSelect01">Options</label>
-    <select class="form-select" id="inputGroupSelect01">
-      <option selected>Choose...</option>
-      <option value="1">One</option>
-      <option value="2">Two</option>
-      <option value="3">Three</option>
-    </select>
+  <h1 class="heading">Vidio Dubbing Translator</h1>
+  <div class="container">
+    <div class="row">
+      <div class="col-6">
+        <label for="basic-url" class="form-label"></label>
+        <div class="input-group mb-3">
+          <span class="input-group-text" id="basic-addon3">Enter Your Vidio URL</span>
+          <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3">
+        </div>
+
+        <div class="input-group mb-3">
+          <label class="input-group-text" for="inputGroupSelect01">Choose your language</label>
+          <select class="form-select" id="inputGroupSelect01">
+            <option selected>Choose...</option>
+            <option value="1">One</option>
+            <option value="2">Two</option>
+            <option value="3">Three</option>
+          </select>
+        </div>
+        <div class="input-group mb-3">
+          <label class="input-group-text" for="inputGroupSelect01">Choose your language</label>
+          <select class="form-select" id="inputGroupSelect01">
+            <option selected>Choose...</option>
+            <option value="1">One</option>
+            <option value="2">Two</option>
+            <option value="3">Three</option>
+          </select>
+        </div>
+        <div class="col-12 d-flex justify-content-between">
+          <button type="button" class="btn btn-danger">Clear</button>
+          <button type="button" class="btn btn-success">Submit</button>
+        </div>
+
+      </div>
+      <div class="col-6">
+        <video width="100%" controls>
+          <source src="https://youtu.be/XyIA5UTsVCU?si=PgQG96vYbuf2MHCW" type="video/mp4">
+
+        </video>
+
+      </div>
+    </div>
+
   </div>
-  
-  <div class="input-group mb-3">
-    <select class="form-select" id="inputGroupSelect02">
-      <option selected>Choose...</option>
-      <option value="1">One</option>
-      <option value="2">Two</option>
-      <option value="3">Three</option>
-    </select>
-    <label class="input-group-text" for="inputGroupSelect02">Options</label>
-  </div>
-  
-  <div class="input-group mb-3">
-    <button class="btn btn-outline-secondary" type="button">Button</button>
-    <select class="form-select" id="inputGroupSelect03" aria-label="Example select with button addon">
-      <option selected>Choose...</option>
-      <option value="1">One</option>
-      <option value="2">Two</option>
-      <option value="3">Three</option>
-    </select>
-  </div>
-  
-  <div class="input-group">
-    <select class="form-select" id="inputGroupSelect04" aria-label="Example select with button addon">
-      <option selected>Choose...</option>
-      <option value="1">One</option>
-      <option value="2">Two</option>
-      <option value="3">Three</option>
-    </select>
-    <button class="btn btn-outline-secondary" type="button">Button</button>
-  </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
